VNet.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "vNETName": {
      "type": "String",
      "metadata": {
        "description": "Name of the virtual network to be created"
      }
    },
    "addressRange": {
      "type": "String",
      "metadata": {
        "description": "Entire Virtual Network Address Range"
      },
      "defaultValue":"10.0.0.0/8"
    },
    "apimRange": {
      "type": "String"
    },
    "appGWRange": {
      "type": "string"
    },
    "aksRange": {
      "type": "String"
    },
    "privateEPRange": {
      "type": "String"
    },
    "sharedRange": {
      "type": "String"
    },
    "bastionRange": {
      "type": "String"
    }
  },
  "variables": {},
  "resources": [
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2019-08-01",
      "name": "APIM-NSG",
      "location": "[resourceGroup().location]",
      "properties": {
        "securityRules": [
          {
            "name": "allow-443",
            "properties": {
              "priority": 110,
              "access": "Allow",
              "direction": "Inbound",
              "destinationPortRange": "443",
              "protocol": "Tcp",
              "sourceAddressPrefix": "[parameters('appGWRange')]",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*"
            }
          },
          {
            "name": "allow-mgmt-endpoint",
            "properties": {
              "priority": 120,
              "access": "Allow",
              "direction": "Inbound",
              "destinationPortRange": "3443",
              "protocol": "Tcp",
              "sourceAddressPrefix": "ApiManagement",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "VIRTUAL_NETWORK"
            }
          },
          {
            "name": "allow-azure-storage",
            "properties": {
              "priority": 130,
              "access": "Allow",
              "direction": "Outbound",
              "destinationPortRange": "443",
              "protocol": "Tcp",
              "sourceAddressPrefix": "VIRTUAL_NETWORK",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "Storage"
            }
          },
          {
            "name": "allow-azure-ad",
            "properties": {
              "priority": 140,
              "access": "Allow",
              "direction": "Outbound",
              "destinationPortRange": "443",
              "protocol": "Tcp",
              "sourceAddressPrefix": "VIRTUAL_NETWORK",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "AzureActiveDirectory"
            }
          },
          {
            "name": "allow-event-hub",
            "properties": {
              "priority": 150,
              "access": "Allow",
              "direction": "Outbound",
              "destinationPortRange": "5671,5672,443",
              "protocol": "Tcp",
              "sourceAddressPrefix": "VIRTUAL_NETWORK",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "EventHub"
            }
          },
          {
            "name": "allow-file-share",
            "properties": {
              "priority": 160,
              "access": "Allow",
              "direction": "Outbound",
              "destinationPortRange": "445",
              "protocol": "Tcp",
              "sourceAddressPrefix": "VIRTUAL_NETWORK",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "Storage"
            }
          },
          {
            "name": "allow-health-status",
            "properties": {
              "priority": 170,
              "access": "Allow",
              "direction": "Outbound",
              "destinationPortRange": "1886",
              "protocol": "Tcp",
              "sourceAddressPrefix": "VIRTUAL_NETWORK",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "AzureCloud"
            }
          },
          {
            "name": "allow-azure-monitor",
            "properties": {
              "priority": 180,
              "access": "Allow",
              "direction": "Outbound",
              "destinationPortRange": "443",
              "protocol": "Tcp",
              "sourceAddressPrefix": "VIRTUAL_NETWORK",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "AzureMonitor"
            }
          },
          {
            "name": "allow-smtp-relay",
            "properties": {
              "priority": 190,
              "access": "Allow",
              "direction": "Outbound",
              "destinationPortRange": "25,587,25028",
              "protocol": "Tcp",
              "sourceAddressPrefix": "VIRTUAL_NETWORK",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "INTERNET"
            }
          },
          {
            "name": "allow-azure-cache",
            "properties": {
              "priority": 200,
              "access": "Allow",
              "direction": "Outbound",
              "destinationPortRange": "6381-6383",
              "protocol": "Tcp",
              "sourceAddressPrefix": "VIRTUAL_NETWORK",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "INTERNET"
            }
          },
          {
            "name": "allow-azure-cache",
            "properties": {
              "priority": 210,
              "access": "Allow",
              "direction": "Inbound",
              "destinationPortRange": "6381-6383",
              "protocol": "Tcp",
              "sourceAddressPrefix": "VIRTUAL_NETWORK",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "INTERNET"
            }
          },
          {
            "name": "deny-all-inbound",
            "properties": {
              "priority": 500,
              "access": "Allow",
              "direction": "Inbound",
              "destinationPortRange": "*",
              "protocol": "Tcp",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*"
            }
          },
          {
            "name": "deny-all-outbound",
            "properties": {
              "priority": 500,
              "access": "Allow",
              "direction": "Outbound",
              "destinationPortRange": "*",
              "protocol": "Tcp",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*"
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2019-08-01",
      "name": "AKS-NSG",
      "location": "[resourceGroup().location]",
      "properties": {

      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2019-08-01",
      "name": "Shared-NSG",
      "location": "[resourceGroup().location]",
      "properties": {
        "securityRules": [
          {
            "name": "deny-all",
            "properties": {
              "priority": 500,
              "access": "Allow",
              "direction": "Outbound",
              "destinationPortRange": "*",
              "protocol": "Tcp",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*"
            }
          },
          {
            "name": "allow-bastion",
            "properties": {
              "priority": 100,
              "access": "Allow",
              "direction": "Inbound",
              "destinationPortRange": "*",
              "protocol": "Tcp",
              "sourceAddressPrefix": "[parameters('bastionRange')]",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*"
            }
          }
        ]
      }      
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2019-08-01",
      "name": "Backend-NSG",
      "location": "[resourceGroup().location]",
      "properties": {
        "securityRules": [
          {
            "name": "deny-all",
            "properties": {
              "priority": 500,
              "access": "Allow",
              "direction": "Outbound",
              "destinationPortRange": "*",
              "protocol": "Tcp",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*"
            }
          },
          {
            "name": "allow-AKS",
            "properties": {
              "priority": 100,
              "access": "Allow",
              "direction": "Inbound",
              "destinationPortRange": "*",
              "protocol": "Tcp",
              "sourceAddressPrefix": "[parameters('aksRange')]",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*"
            }
          },
          ,
          {
            "name": "allow-Mgmt",
            "properties": {
              "priority": 100,
              "access": "Allow",
              "direction": "Inbound",
              "destinationPortRange": "*",
              "protocol": "Tcp",
              "sourceAddressPrefix": "[parameters('sharedRange')]",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*"
            }
          }
        ]
      }      
    },
    {
      "type": "Microsoft.Network/virtualNetworks",
      "apiVersion": "2019-04-01",
      "name": "[parameters('vNETName')]",
      "location": "[resourceGroup().location]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', 'APIM-NSG')]",
        "[resourceId('Microsoft.Network/networkSecurityGroups', 'AKS-NSG')]",
        "[resourceId('Microsoft.Network/networkSecurityGroups', 'Shared-NSG')]"
      ],
      "tags": {},
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[parameters('addressRange')]"
          ]
        },
        "subnets": [
          {
            "name": "AzureBastionSubnet",
            "properties": {
              "addressPrefix": "[parameters('bastionRange')]"
            }
          },
          {
            "name": "PrivateEP-SN",
            "properties": {
              "addressPrefix": "[parameters('privateEPRange')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', 'Backend-NSG')]"
              },
              "privateEndpointNetworkPolicies": "Disabled" 
            }
          },
          {
            "name": "Shared-SN",
            "properties": {
              "addressPrefix": "[parameters('sharedRange')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', 'Shared-NSG')]"
              }
            }
          },
          {
            "name": "APIM-SN",
            "properties": {
              "addressPrefix": "[parameters('apimRange')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', 'APIM-NSG')]"
              }
            }
          },
          {
            "name": "AKS-SN",
            "properties": {
              "addressPrefix": "[parameters('aksRange')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', 'AKS-NSG')]"
              }
            }
          },
          {
            "name": "APPGW-SN",
            "properties": {
              "addressPrefix": "[parameters('appgwRange')]",
            }
          }
        ]
      }
    }
  ],
  "outputs": {
    "vnetId": {
      "type": "string",
      "value": "[resourceId('Microsoft.Network/virtualNetworks', parameters('vNETName'))]"
    },
    "epSubnetID": {
      "type": "string",
      "value": "[concat(resourceId('Microsoft.Network/virtualNetworks', parameters('vNETName')), '/subnets/PrivateEP-SN')]"
    },
    "bastionSubnetID": {
      "type": "string",
      "value": "[concat(resourceId('Microsoft.Network/virtualNetworks', parameters('vNETName')), '/subnets/AzureBastionSubnet')]"
    },
    "sharedSubnetID": {
      "type": "string",
      "value": "[concat(resourceId('Microsoft.Network/virtualNetworks', parameters('vNETName')), '/subnets/Shared-SN')]"
    },
    "aksSubnetID": {
      "type": "string",
      "value": "[concat(resourceId('Microsoft.Network/virtualNetworks', parameters('vNETName')), '/subnets/AKS-SN')]"
    },
    "apimSubnetID": {
      "type": "string",
      "value": "[concat(resourceId('Microsoft.Network/virtualNetworks', parameters('vNETName')), '/subnets/APIM-SN')]"
    },
    "appgwSubnetID": {
      "type": "string",
      "value": "[concat(resourceId('Microsoft.Network/virtualNetworks', parameters('vNETName')), '/subnets/APPGW-SN')]"
    }
  }
}
